--- a/index.html
+++ b/index.html
@@ -12,23 +12,31 @@
     <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
 
 
-    <script>
-      //Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyBYV9kWljd-8zlRsYSLGIv2zBX4MhkNAo8",
-        authDomain: "multiplayer-car-racing-game.firebaseapp.com",
-        databaseURL: "https://multiplayer-car-racing-game.firebaseio.com",
-        projectId: "multiplayer-car-racing-game",
-        storageBucket: "",
-        messagingSenderId: "936147099930",
-        appId: "1:936147099930:web:dba47c5bb648f4ef"
-      };
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
 
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    </script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCHAfGoEexpji__R5_bxgd9IIC4r6PQc-U",
+    authDomain: "carracing-6c375.firebaseapp.com",
+    databaseURL: "https://carracing-6c375-default-rtdb.firebaseio.com",
+    projectId: "carracing-6c375",
+    storageBucket: "carracing-6c375.appspot.com",
+    messagingSenderId: "470078204473",
+    appId: "1:470078204473:web:2fa077ffa4eb0412f6fbe8"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 
     <script src="js/Player.js"></script>
     <script src="js/Form.js"></script>
